# hoverkite

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: projects.yml  rust.yml
cross/: Cargo.toml
cross/.cargo/: config  config.toml
cross/hoverkite-firmware/: Cargo.toml  openocd.cfg  openocd.gdb
cross/hoverkite-firmware/src/: buffered_tx.rs  circular_buffer.rs  hoverboard.rs  main.rs  motor.rs  protocol.rs  pwm.rs  systick.rs
cross/hoverkite-firmware/src/hoverboard/: adc.rs  buzzer.rs  interrupts.rs  mod.rs  motor.rs  serial.rs
cross/hoverkite-firmware/src/hoverboard/util/: buffered_tx.rs  mod.rs
cross/kitebox/: Cargo.toml  README.md
cross/kitebox/.cargo/: config.toml
cross/kitebox/src/: lib.rs  messages.rs  servo.rs
docs/: protocol.md
docs/presentation/: index.html  slides.md
hovercontrol/: .gitignore  Cargo.toml  README.md  hovercontrol.example.toml
hovercontrol/src/: config.rs  controller.rs  homie.rs  hoverkite.rs  main.rs
hoverkite-firmware/: Cargo.toml  memory.x  openocd.gdb
hoverkite-firmware/.cargo/: config
hoverkite-firmware/src/: buffered_tx.rs  hoverboard.rs  main.rs  motor.rs  protocol.rs  util.rs
hoverkite-protocol/: Cargo.toml
hoverkite-protocol/src/: command.rs  lib.rs  response.rs  util.rs
kitebox-messages/: Cargo.toml  build.rs  kitebox-messages.capnp
kitebox-messages/src/: lib.rs
kiteboxcontrol/: Cargo.toml
kiteboxcontrol/src/: main.rs
messages/: Cargo.toml
messages/examples/: abc.rs
messages/src/: client.rs  command.rs  error.rs  lib.rs  response.rs  util.rs
st3215/: Cargo.toml  README.md  build.rs
st3215/examples/: read_servo_data.rs  send_servo_command.rs
st3215/src/: lib.rs  messages.rs  registers.rs  servo_bus_async.rs
st3215/tests/: generate_registers.rs
svd/: README.md
