[workspace]
members = [
    "hoverkite-firmware"
]

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

# Optimise dev builds a bit, so that you can build without running out of flash space.
# https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
opt-level = 1
lto = true
codegen-units = 1
