[package]
name = "hovercontrol"
authors = ["Andrew Walbran <qwandor@gmail.com>"]
edition = "2018"
version = "0.1.0"

[dependencies]
color-backtrace = "0.6.1"
eyre = "0.6.12"
gilrs = "0.10.7"
homie-device = "0.9.0"
log = "0.4.21"
messages = { path = "../messages" }
nb = "1.1.0"
pretty_env_logger = "0.5.0"
rumqttc = "0.22.0"
rustls = "0.21.11"
rustls-native-certs = "0.6.3"
serde_derive = "1.0.188"
serde = "1.0.203"
serialport = "4.4.0"
stable-eyre = "0.2.2"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread"] }
toml = "0.8.14"
