[package]
name = "hovercontrol"
authors = ["Andrew Walbran <qwandor@gmail.com>"]
edition = "2018"
version = "0.1.0"

[dependencies]
color-backtrace = "0.7.0"
eyre = "0.6.12"
gilrs = "0.11.0"
homie-device = "0.9.0"
log = "0.4.25"
messages = { path = "../messages" }
nb = "1.1.0"
pretty_env_logger = "0.5.0"
rumqttc = "0.22.0"
rustls = "0.21.11"
rustls-native-certs = "0.6.3"
serde_derive = "1.0.188"
serde = "1.0.217"
serialport = "4.7.0"
stable-eyre = "0.2.2"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread"] }
toml = "0.8.20"
