[package]
name = "hovercontrol"
authors = ["Andrew Walbran <qwandor@gmail.com>"]
edition = "2018"
version = "0.1.0"

[dependencies]
color-backtrace = "0.7.0"
eyre = "0.6.12"
gilrs = "0.11.0"
homie-device = "0.11.0"
log = "0.4.26"
messages = { path = "../messages" }
nb = "1.1.0"
pretty_env_logger = "0.5.0"
rumqttc = "0.25.0"
rustls = "0.23.32"
rustls-native-certs = "0.8.1"
serde_derive = "1.0.188"
serde = "1.0.219"
serialport = "4.7.3"
stable-eyre = "0.2.2"
tokio = { version = "1.43.1", features = ["rt", "rt-multi-thread"] }
toml = "0.8.20"
