[package]
name = "hoverkite-firmware"
authors = ["Andrew Walbran <qwandor@gmail.com>"]
edition = "2018"
readme = "README.md"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
embedded-hal = "0.2.4"
nb = "1.0.0"
panic-halt = "0.2.0"
stm32f0xx-hal = { version = "0.17.1", features = ["rt", "stm32f030x8"] }

# this lets you use `cargo fix`!
[[bin]]
name = "hoverkite-firmware"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
