[package]
name = "hoverkite-firmware"
authors = ["Andrew Walbran <qwandor@gmail.com>"]
edition = "2018"
readme = "README.md"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
embedded-hal = "0.2.4"
nb = "1.0.0"
panic-halt = "0.2.0"
gd32f1x0-hal = { version = "0.1.0", features = ["rt", "gd32f130x8"], git = "https://github.com/qwandor/gd32f1x0-hal", branch = "main" }

# this lets you use `cargo fix`!
[[bin]]
name = "hoverkite-firmware"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

# Optimise dev builds a bit, so that you can build without running out of flash space.
# https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
opt-level = 1
lto = true
codegen-units = 1
