[package]
name = "hoverkite-protocol"
version = "0.1.0"
authors = ["David Laban <alsuren@gmail.com>"]
edition = "2018"

[dependencies]
embedded-hal = "0.2.4"
nb = "1.0.0"
arrayvec = { version = "0.7.0", default-features = false }

[dev-dependencies]
test-case = "1.1.0"

[features]
default = ["std"]
std = []
