[package]
name = "kitebox-messages"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies.capnp_conv]
git = "https://github.com/alsuren/capnp_conv"
branch = "no_std"
default-features = false

[dependencies.capnp]
version = "*"
default-features = false
features = ["unaligned"]

[build-dependencies.capnpc]
version = "*"
