[package]
name = "messages"
version = "0.1.0"
authors = ["David Laban <alsuren@gmail.com>"]
edition = "2018"

[dependencies]
arrayvec = { version = "0.7.1", default-features = false }
displaydoc = { version = "0.2.3", default-features = false }
embedded-hal = "0.2.6"
log = { version = "0.4.14", optional = true }
nb = "1.0.0"
serialport = { version = "4.0.1", optional = true }
slice-deque = { version = "0.3.0", optional = true}

[dev-dependencies]
abc-parser = "0.3.0"
color-backtrace = "0.5.1"
eyre = "0.6.5"
pretty_env_logger = "0.4.0"
serialport = "4.0.1"
stable-eyre = "0.2.2"
test-case = "1.2.0"

[features]
default = ["std"]
std = ["log", "serialport", "slice-deque"]
