[package]
name = "messages"
version = "0.1.0"
authors = ["David Laban <alsuren@gmail.com>"]
edition = "2018"

[dependencies]
arrayvec = { version = "0.7.4", default-features = false }
displaydoc = { version = "0.2.4", default-features = false }
embedded-hal = "0.2.7"
log = { version = "0.4.20", optional = true }
nb = "1.1.0"
serialport = { version = "4.2.2", optional = true }
slice-deque = { version = "0.3.0", optional = true}

[dev-dependencies]
abc-parser = "0.3.0"
color-backtrace = "0.6.1"
eyre = "0.6.8"
pretty_env_logger = "0.5.0"
serialport = "4.2.2"
stable-eyre = "0.2.2"
test-case = "3.3.1"

[features]
default = ["std"]
std = ["log", "serialport", "slice-deque"]
