[package]
name = "messages"
version = "0.1.0"
authors = ["David Laban <alsuren@gmail.com>"]
edition = "2018"

[dependencies]
arrayvec = { version = "0.7.6", default-features = false }
displaydoc = { version = "0.2.5", default-features = false }
embedded-io = "0.7.1"
embedded-io-adapters = { version = "0.7.0", features = [
    "std",
], optional = true }
log = { version = "0.4.26", optional = true }
nb = "1.1.0"
serialport = { version = "4.7.3", optional = true }
slice-deque = { version = "0.3.0", optional = true }

[dev-dependencies]
abc-parser = "0.3.0"
color-backtrace = "0.7.0"
eyre = "0.6.12"
pretty_env_logger = "0.5.0"
serialport = "4.7.3"
stable-eyre = "0.2.2"
test-case = "3.3.1"

[features]
default = ["std"]
std = [
    "log",
    "serialport",
    "slice-deque",
    "embedded-io/std",
    "embedded-io-adapters",
]
