[package]
name = "st3215"
version = "0.0.2"
authors = ["David Laban <alsuren@gmail.com>"]
description = "A crate for communicating with Feetech/Waveshare branded ST3215 serial bus servos"
repository = "https://github.com/hoverkite/hoverkite/tree/main/st3215"
license = "MIT OR Apache-2.0"

edition = "2021"
keywords = ["feetech", "waveshare", "servo", "motor"]
categories = ["science::robotics"]

[dependencies]
embedded-io-async = { version = "0.6.1" }
embedded-io = { version = "0.6.1" }
embassy-time = "0.4.0"

tinyvec = "1.9.0"
bitflags = "1.3.2"
log = "0.4"

[target.'cfg(any(target_arch = "xtensa"))'.dev-dependencies]
esp-println = { version = "0.15.0", features = ["esp32", "log-04"] }
esp-hal = { version = "1.0.0-rc.0", features = ["esp32", "unstable"] }

[dev-dependencies]
futures-test = "0.3.31"
embedded-io-async = {features = ["std"], version = "0.6.1"}
embedded-io = {features = ["std"], version = "0.6.1"}
embedded-io-adapters = {features = ["std"], version = "0.6.1"}
serialport = "3.1.1"
