[package]
name = "hoverkite-firmware"
authors = ["Andrew Walbran <qwandor@gmail.com>"]
edition = "2018"
readme = "README.md"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.3"
cortex-m-semihosting = "0.3.7"
embedded-hal = "0.2.6"
bmi160 = "0.1.2"
nb = "1.1.0"
panic-halt = "0.2.0"
gd32f1x0-hal = { version = "0.7.1", features = ["rt", "gd32f130x8"] }
messages = { path = "../../messages", default-features = false }

[features]
primary = []
secondary = []
default = ["secondary"]

# this lets you use `cargo fix`!
[[bin]]
name = "hoverkite-firmware"
test = false
bench = false
