[package]
name = "hoverkite-firmware"
authors = ["Andrew Walbran <qwandor@gmail.com>"]
edition = "2018"
readme = "README.md"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.4"
cortex-m-semihosting = "0.5.0"
embedded-hal = "1.0.0"
embedded-io = "0.6.1"
bmi160 = "1.1.0"
nb = "1.1.0"
panic-halt = "0.2.0"
gd32f1x0-hal = { version = "0.10.0", features = ["rt", "gd32f130x8"] }
messages = { path = "../../messages", default-features = false }

[features]
primary = []
secondary = []
default = ["secondary"]

# this lets you use `cargo fix`!
[[bin]]
name = "hoverkite-firmware"
test = false
bench = false
