[package]
name = "hoverkite-firmware"
authors = ["Andrew Walbran <qwandor@gmail.com>"]
edition = "2018"
readme = "README.md"
version = "0.1.0"

# We mark ourselves as a separate workspace to avoid being included in top-level host-arch builds
[workspace]
resolver = "2"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

# Optimise dev builds a bit, so that you can build without running out of flash space.
# https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
opt-level = 2
lto = true
codegen-units = 1

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
cortex-m-semihosting = "0.5.0"
embedded-hal = "1.0.0"
embedded-io = "0.6.1"
bmi160 = "1.1.0"
nb = "1.1.0"
panic-halt = "1.0.0"
gd32f1x0-hal = { version = "0.10.1", features = ["rt", "gd32f130x8"] }
messages = { path = "../../messages", default-features = false }

[features]
primary = []
secondary = []
default = ["secondary"]

# this lets you use `cargo fix`!
[[bin]]
name = "hoverkite-firmware"
test = false
bench = false
