[package]
edition = "2021"
name    = "kitebox"
version = "0.1.0"

# We mark ourselves as a separate workspace to avoid being included in top-level host-arch builds
[workspace]
resolver = "2"

[[bin]]
name = "kitebox"
path = "./src/bin/async_main.rs"

[dependencies]
st3215 = { path = "../../st3215" }

embassy-net = { version = "0.6.0", features = [
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = { version = "0.7.0" }
esp-backtrace = { version = "0.15.0", features = [
  "esp32",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-hal = { version = "1.0.0-beta.0", features = ["esp32", "unstable"] }
# esp-hal = {  git = "https://github.com/esp-rs/esp-hal", features = ["esp32", "unstable"] }
esp-println = { version = "0.13.0", features = ["esp32", "log"] }
esp-wifi = { version = "0.13.0", features = [
  "esp32",
  "log",
  "wifi",
  "esp-now",
] }
# This is just to sidestep an error from rust-analyzer. There is probably a cleaner way to do this.
xtensa-lx-rt = {version = "*", features = ["esp32"]}
heapless = { version = "0.8.0", default-features = false }
log = { version = "0.4.21" }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
# for more networking protocol support see https://crates.io/crates/edge-net
bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "a5148d8ae679e021b78f53fd33afb8bb35d0b62e", features = [
  "async",
  "macros",
] }
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480"] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
embassy-sync = "0.6.1"
esp-hal-embassy = { version = "0.7.0", features = ["esp32"] }
static_cell = { version = "2.1.0", features = ["nightly"] }
embassy-futures = "0.1.1"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
